@@ -1,5 +1,6 @@
 Search API Solr search 1.x, dev (xx/xx/xxxx):
 ---------------------------------------------
+- #2033913 by drunken monkey: Fixed small error in schema.xml.
 - #2073441 by drunken monkey: Removed custom uninstall code for deleting
   dependent servers.
 - #1882190 by corvus_ch, arnested, drunken monkey: Added optional index ID
